Pre padding overflow fix

--- a/_includes/assets/css/style.css
+++ b/_includes/assets/css/style.css
@@ -445,17 +445,6 @@ ARTICLE
   line-height: 1.3;
 }
 
-/* Pre & code formating */
-/* pre {
-  white-space: pre-wrap;
-} */
-
-code {
-  font-family: monospace;
-  white-space: pre-wrap;
-  word-break: break-all;
-}
-
 /* Plus list style type */
 
 .article li {
@@ -536,6 +525,21 @@ blockquote p {
   width: 100%;
 }
 
+/* Pre & code */
+
+code {
+  font-family: monospace;
+  white-space: pre-wrap;
+  word-break: break-all;
+}
+
+/* Sticky .copy-section causes code to 
+overflow pre padding on the right */
+code[class*="language-"] {
+  display: inline-block;
+	padding-right:1em;
+}
+
 /* Copy to clipboard section */
 .copy-section {
   position: sticky;
@@ -543,9 +547,10 @@ blockquote p {
   left: 0;
   max-height: 0;
   overflow: hidden;
-  transition: all 1s ease;
+  transition: all 1s ease-in-out;
 }
 
+/* Reveal copy to clipboard button */
 pre:hover .copy-section {
   max-height: 500px;
   overflow: hidden;
@@ -575,9 +580,9 @@ pre hr {
   border: transparent;
 }
 
-/* No image click events to trigger the button */
+/* Removing button icon click event to trigger the button */
 pre img {
-  pointer-events: none
+  pointer-events: none;
 }
 
 /* Copied success message! */
